# pkit

./: .gitignore  .pdm-python  README.md  buildozer.spec  extract-dts.js  json-to-markdown.js  pyproject.toml
.github/workflows/: 1.yml  build.yml
receipe/brotli/: __init__.py
receipe/brotli/patches/: setup.patch
receipe/ffmpeg_bin/: __init__.py  mediandk.c
receipe/ffmpeg_bin/patches/: configure.patch
receipe/lz4/: __init__.py
receipe/vgmstream/: __init__.py
receipe/vgmstream/patches/: CMakeLists.patch  ffmpeg.patch  ogg.patch  vorbis.patch
src/phicain/: main.py  metadata.py  pgr_catalog.py  pgr_unpack_typetree.json  unpack.py
src/phicain/utils/audios/ffmpeg_crosser/: __init__.py
src/phicain/utils/audios/vgmstream_fixer/: __init__.py
src/phicain/utils/ffmpeg_crosser/: __init__.py
src/phicain/utils/fsbkit/: __init__.py
src/phicain/utils/libcheck/: __init__.py
src/phicain/utils/official/pkg_fetcher/: __init__.py  fetcher.py  taptap.py
src/phicain/utils/syscheck/: __init__.py
src/phicain/utils/vgmstream_fixer/: __init__.py
tests/phicain/pkg_fetcher/: main.py  test_fetcher.py  test_taptap.py
