[project]
name = "pkit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rancemxn", email = "209220634+Rancemxn@users.noreply.github.com"},
]
dependencies = ["requests>=2.32.3", "pysmartdl2>=2.0.1", "urllib3>=2.4.0", "loguru==0.7.*"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.7",
    "pytest>=8.3.5",
    "typer[rich]>=0.15.2",
]
