[project]
name = "pkit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rancemxn", email = "209220634+Rancemxn@users.noreply.github.com"},
]
dependencies = ["requests>=2.32.3", "pysmartdl2>=2.0.1", "urllib3>=2.4.0", "loguru==0.7.*"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.7",
    "pytest>=8.3.5",
    "typer[rich]>=0.15.2",
]

[tool.pytest.ini_options]
addopts = "-l"
filterwarnings = [
  "ignore:.*:urllib3.exceptions.InsecureRequestWarning",
]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm.scripts]
fetchpkg = { cmd = "python src/phicain/utils/official/pkg_fetcher/fetcher.py", env = { PYTHONPATH = "${PWD}${sep}src" } }
# https://github.com/pdm-project/pdm/issues/3486