[project]
name = "pkit"
version = "0.3.0"
description = "Phigros Kit Collection"
authors = [
    {name = "Rancemxn", email = "209220634+Rancemxn@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pysmartdl2>=2.0.1",
    "urllib3>=2.4.0",
    "loguru==0.7.*",
    "PySDL3>=0.9.8b1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 80

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.7",
    "pytest>=8.3.5",
    "typer[rich]>=0.15.2",
]

[tool.pytest.ini_options]
addopts = "-l"
filterwarnings = [
  "ignore:.*:urllib3.exceptions.InsecureRequestWarning",
]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm.scripts]
fetchpkg = "python src/phicain/utils/official/pkg_fetcher/__init__.py"
